tests/toylang/neg/001108_mutation.toylang
program a = { if a then var sleep; } .
